--- a/client/src/common/Button.css
+++ b/client/src/common/Button.css
@@ -82,11 +82,7 @@
 .button--professor {
   animation: pulse 2s infinite;
   color: white;
-  background: linear-gradient(
-    to right,
-    rgba(255, 116, 40, 0.3),
-    rgba(255, 54, 62, 1)
-  );
+  background: linear-gradient(to right, rgba(255, 116, 40, 0.3), rgba(255, 54, 62, 1));
   box-shadow: 0 0 0 rgba(204, 169, 44, 0.4);
   padding: 1rem 2rem;
   width: 100%;
@@ -111,8 +107,7 @@
 .button--hero {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 20px;
-  box-shadow: 0px 0px 0px 3px red inset, 0px 0px 40px rgba(255, 0, 0, 0.5),
-    0px 0px 40px rgba(255, 0, 0, 0.5) inset;
+  box-shadow: 0px 0px 0px 3px red inset, 0px 0px 40px rgba(255, 0, 0, 0.5), 0px 0px 40px rgba(255, 0, 0, 0.5) inset;
   margin: 0.5rem;
   padding: 2rem;
 }
